update release notes

--- a/release-notes/1.0.8.md
+++ b/release-notes/1.0.8.md
@@ -1,2 +1,4 @@
 ## Parquetify
 
+- Added both `x86` and `ARM` .deb packages
+- Fixed issue where inserted data into column with `DOUBLE` type would lose its precision
